ci: GitHub Actions를 이용한 CI/CD 설정 (#20)
* fix: yaml 설정파일 환경변수 설정

* refactor: application.yaml에 프로필 설정만 남도록 개선

* chore: 버킷 의존성 추가

* fix: CORS 설정 환경변수화

* fix: frontend redirect url 환경변수화

* fix: swagger 문서 수정 및 server url 환경변수화

* test: contextLoads 주석처리 (테스트 빌드 시 오류 발생 방지)

* build: Dockerfile 추가

* ci: CI/CD 를 위한 배포 스크립트 추가